--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-autoplay": "^6.2.0",
     "embla-carousel-react": "^6.2.0",
     "next": "12.1.4",
     "react": "^17.0.2",
